tests/snapshots/render_snapshots__snapshot_revert_popup_with_gpg_sign.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌Revert────────────────────────────────────────────────────────────────────────┐"
"│Arguments                                                                     │"
"│ -m Replay merge relative to parent (--mainline=)                             │"
"│ -e Edit commit message (--edit)                                              │"
"│ -E Don't edit commit message (--no-edit)                                     │"
"│ =s Strategy (--strategy=)                                                    │"
"│ -S Sign using gpg (--gpg-sign=ABCD1234)                                      │"
"│                                                                              │"
"│Actions                                                                       │"
"│ _ Revert commit(s)                                                           │"
"│ s Skip                                                                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
