tests/snapshots/render_snapshots__snapshot_revert_strategy_select_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌Merge strategy────────────────────────────────────────────────────────────────┐"
"│[1]/[5] Merge strategy: _                                                     │"
"│resolve                                                                       │"
"│recursive                                                                     │"
"│octopus                                                                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
