tests/snapshots/render_snapshots__snapshot_stash_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌Stash─────────────────────────────────────────────────────────────────────────┐"
"│Arguments                                                                     │"
"│ -u Also save untracked files (--include-untracked)                           │"
"│ -a Also save untracked and ignored files (--all)                             │"
"│                                                                              │"
"│Stash             Snapshot       Use       Inspect                            │"
"│ z Both            Z Both         a Apply   l List                            │"
"│ i Index           I Index        p Pop     v Show                            │"
"│ w Worktree        W Worktree     k Drop                                      │"
"│ x Keeping index   r To wip ref                                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
