tests/snapshots/render_snapshots__snapshot_status_view_with_all_sections.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Add staged file                                        │"
"│                                                                              │"
"│∨Untracked files (1)                                                          │"
"│ untracked.txt                                                                │"
"│                                                                              │"
"│∨Unstaged changes (1)                                                         │"
"│>modified committed.txt                                                       │"
"│                                                                              │"
"│∨Staged changes (1)                                                           │"
"│>modified staged.txt                                                          │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Add staged file                                                 │"
"│ [hash] Add committed file                                                   │"
"│ [hash] Initial commit                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ NORMAL ──────────────────────────────────────────────────────────────────────┘"
