tests/snapshots/render_snapshots__snapshot_status_view_with_merge_conflict.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Change on main                                         │"
"│                                                                              │"
"│∨Unstaged changes (1)                                                         │"
"│∨unmerged conflict.txt                                                        │"
"│ @@@ -1,1 -1,1 +1,5 @@@                                                       │"
"│ ++<<<<<<< HEAD                                                               │"
"│  +main content                                                               │"
"│ ++=======                                                                    │"
"│ + other content                                                              │"
"│ ++>>>>>>> other                                                              │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Change on main                                                  │"
"│ [hash] Add base file                                                        │"
"│ [hash] Initial commit                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ NORMAL ──────────────────────────────────────────────────────────────────────┘"
