tests/snapshots/render_snapshots__snapshot_tag_popup_with_force_argument.snap
---
source: tests/render_snapshots.rs
expression: "render_to_styled_string(&model, 80, 24)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐",
        "│∨Head:    main [hash] Initial commit                                         │",
        "│                                                                              │",
        "│∨Recent commits                                                               │",
        "│ [hash] main Initial commit                                                  │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "┌Tag───────────────────────────────────────────────────────────────────────────┐",
        "│Arguments                                                                     │",
        "│ -f Force (--force)                                                           │",
        "│ -e Edit message (--edit)                                                     │",
        "│ -a Annotate (--annotate)                                                     │",
        "│ -s Sign (--sign)                                                             │",
        "│ -u Sign as (--local-user=)                                                   │",
        "│                                                                              │",
        "│Create      Do                                                                │",
        "│ t Tag       x Delete                                                         │",
        "│ r Release   p Prune                                                          │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Yellow, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Yellow, bg: Rgb(60, 60, 80), underline: Reset, modifier: REVERSED,
        x: 3, y: 1, fg: Yellow, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Blue, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 15, y: 1, fg: Reset, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 16, y: 1, fg: Rgb(139, 69, 19), bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 23, y: 1, fg: Reset, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Rgb(139, 69, 19), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 4, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD | UNDERLINED,
        x: 14, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 14, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 14, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 15, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 16, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 17, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 18, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 20, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 15, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 22, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
