tests/snapshots/render_snapshots__snapshot_tag_popup_with_sign_as_value.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌Tag───────────────────────────────────────────────────────────────────────────┐"
"│Arguments                                                                     │"
"│ -f Force (--force)                                                           │"
"│ -e Edit message (--edit)                                                     │"
"│ -a Annotate (--annotate)                                                     │"
"│ -s Sign (--sign)                                                             │"
"│ -u Sign as (--local-user=ABCD1234)                                           │"
"│                                                                              │"
"│Create      Do                                                                │"
"│ t Tag       x Delete                                                         │"
"│ r Release   p Prune                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
