tests/snapshots/render_snapshots__snapshot_tag_release_input_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│         ┌Create release tag (previous was v1.0.0)──────────────────┐         │"
"│         │ v1.0.0_                                                  │         │"
"│         │                                                          │         │"
"│         │ Enter to confirm, Esc to cancel                          │         │"
"│         └──────────────────────────────────────────────────────────┘         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ NORMAL ──────────────────────────────────────────────────────────────────────┘"
