tests/snapshots/render_snapshots__snapshot_worktree_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌Worktree──────────────────────────────────────────────────────────────────────┐"
"│Create new              Commands                                              │"
"│ b Worktree              m Move worktree                                      │"
"│ c Branch and worktree                                                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
